# opencc_pyo3

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.txt  makefile.linux  pyproject.toml  use_chuck_aba_reflow.py  use_opencc_pyo3.py  use_opencc_pyo3_dev.py  use_pdf_extract_progress.py  use_pdf_extract_reflow.py  use_pdfium_progress.py  use_pdfium_test.py
.github/workflows/: bench_opencc.yml  build.yml  build_artifacts.yml
bench/: opencc_benchmark_md.py  requirements.txt
install/linux/: opencc_pyo3-0.8.3-cp38-abi3-manylinux_2_34_x86_64.whl
install/macos-arm64/: opencc_pyo3-0.8.3-cp38-abi3-macosx_11_0_arm64.whl
install/win10x64/: opencc_pyo3-0.8.0-cp38-abi3-win_amd64.whl  opencc_pyo3-0.8.1-cp38-abi3-win_amd64.whl  opencc_pyo3-0.8.2-cp38-abi3-win_amd64.whl  opencc_pyo3-0.8.3-cp38-abi3-win_amd64.whl
install/win7-x86/: opencc_pyo3.pyd
install/win7x32/: opencc_pyo3-0.6.1-cp38-abi3-win32.whl  opencc_pyo3-0.8.0-cp38-abi3-win32.whl
install/win7x64/: opencc_pyo3-0.8.0-cp38-abi3-win_amd64.whl  opencc_pyo3.pyd
opencc_pyo3/: __init__.py  __main__.py  office_helper.py  opencc_pyo3.cp312-win_amd64.pyd  opencc_pyo3.cp313-win_amd64.pyd  opencc_pyo3.pyi  pdfium_helper.py  pdfium_loader.py  pdfium_text.py
python/: opencc_pyo3-0.5.0-cp312-cp312-manylinux_2_34_x86_64.whl  opencc_pyo3-0.5.0-cp313-cp313-win_amd64.whl  opencc_pyo3-0.6.0-cp313-cp313-win_amd64.whl  opencc_pyo3-0.6.0-cp38-abi3-manylinux_2_34_x86_64.whl  opencc_pyo3-0.6.0-cp38-abi3-win_amd64.whl  opencc_pyo3-0.6.1-cp38-abi3-win_amd64.whl  opencc_pyo3-0.6.2-cp38-abi3-manylinux_2_34_x86_64.whl  opencc_pyo3-0.6.2-cp38-abi3-win_amd64.whl  opencc_pyo3-0.6.3-cp38-abi3-win_amd64.whl  opencc_pyo3-0.7.0-cp38-abi3-win_amd64.whl  opencc_pyo3-0.8.0-cp38-abi3-win_amd64.whl  opencc_pyo3-1.0.0-cp310-none-win_amd64.whl  opencc_pyo3-1.0.0-cp312-cp312-manylinux_2_34_x86_64.whl  opencc_pyo3-1.0.0-cp312-none-win_amd64.whl  opencc_pyo3-1.0.0-cp38-none-win_amd64.whl
python/opencc_pyo3/: __init__.py  __main__.py  office_doc_helper.py  office_helper.py  opencc_pyo3.cp310-win_amd64.pyd  opencc_pyo3.cp312-win_amd64.pyd  opencc_pyo3.cp313-win_amd64.pyd  opencc_pyo3.cp38-win_amd64.pyd  opencc_pyo3.pyd  opencc_pyo3.pyi  pdfium_helper.py  pdfium_loader.py
python/opencc_pyo3-1.0.0.dist-info/: METADATA  RECORD  direct_url.json
src/: cjk_text.rs  lib.rs  pdf_extract_helper.rs  punct_sets.rs  reflow_helper.rs
tests/: test_opencc.py  test_opencc_ids.py  use_chuck_aba_reflow.py  use_opencc_pyo3.py  use_opencc_pyo3_dev.py  use_pdf_extract_progress.py  use_pdf_extract_reflow.py  use_pdfium_progress.py  use_pdfium_progress_collector.py  use_pdfium_test.py
tests/data/: my_hk_dict.txt
tools/: sync_pdfium_for_wheel.py
