[package]
name = "opencc-pyo3"         # Cargo uses dash
version = "0.6.1"
edition = "2021"
authors = ["laisuk <laisuk@yahoo.com>"]
license = "MIT"
description = "A Python extension module powered by Rust and PyO3, providing fast and accurate Chinese text conversion."
repository = "https://github.com/laisuk/opencc_pyo3"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# opencc-fmmseg = {path = "../opencc-fmmseg"}
opencc-fmmseg = { git = "https://github.com/laisuk/opencc-fmmseg.git", branch = "master" }
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3-py38"]}

[lib]
name = "opencc_pyo3"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "opencc_pyo3"         # maturin maps to Python project name (underscore)