[package]
name = "opencc-pyo3"         # Cargo uses dash
version = "0.8.7"
edition = "2021"
authors = ["laisuk <laisuk@yahoo.com>"]
license = "MIT"
description = "A Python extension module powered by Rust and PyO3, providing fast and accurate Chinese text conversion."
repository = "https://github.com/laisuk/opencc_pyo3"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# opencc-fmmseg = {path = "../opencc-fmmseg"}
opencc-fmmseg = { git = "https://github.com/laisuk/opencc-fmmseg.git", branch = "master" }
#opencc-fmmseg = "0.8.4"
pyo3 = { version = "0.27.2", features = ["abi3-py38"]}
once_cell = "1.21.3"
pdf-extract = "=0.8.2"
smallvec = "1.15.1"
#time = "=0.3.41"
#rangemap = "=1.6.0"

[features]
default = []

# Enable only when building a Python extension module (e.g. via maturin).
# Do NOT enable by default: `cargo test` builds a standalone executable
# which must link against libpython and will fail in extension-module mode (Linux).
extension-module = ["pyo3/extension-module"]

[lib]
name = "opencc_pyo3"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "opencc_pyo3"         # maturin maps to Python project name (underscore)
