[package]
name = "opencc-pyo3"         # Cargo uses dash
version = "0.9.0"
edition = "2021"
authors = ["laisuk <laisuk@yahoo.com>"]
license = "MIT"
description = "High-performance Chinese text conversion (Simplified ↔ Traditional) powered by Rust, PyO3, and OpenCC lexicons."
repository = "https://github.com/laisuk/opencc_pyo3"
readme = "README.md"

include = [
    "Cargo.toml",
    "pyproject.toml",
    "README.md",
    "/LICENSE",
    "src/**",
    "opencc_pyo3/*.py",
    "opencc_pyo3/*.pyi",
    "opencc_pyo3/py.typed",
    "pdfium/**",
    "tools/**"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencc-fmmseg = { git = "https://github.com/laisuk/opencc-fmmseg.git", branch = "master" }
#opencc-fmmseg = "0.9.2"
#opencc-fmmseg = { path = "../opencc-fmmseg" }
pyo3 = { version = "=0.27", features = ["abi3-py38"] }
smallvec = "1.15"
#rayon-core = "=1.12.1"
#time = "=0.3.41"
#rangemap = "=1.6.0"
#indexmap = "=2.11.4"

# MSRV 1.75 guard:
# cc 1.2.48 pulls jobserver 0.1.34 -> wit-bindgen 0.57.1,
# which requires edition2024 and breaks cargo +1.75.0.
# Re-enable if Cargo.lock is accidentally updated:
# cc = "=1.2.47"

[features]
# Default: Rust core only. PDF support is handled by Python-side PDFium loading.
default = []
gen-import-lib = ["pyo3/generate-import-lib"]

# Enable only when building a Python extension module (e.g. via maturin).
# Do NOT enable by default: `cargo test` builds a standalone executable
# which must link against libpython and will fail in extension-module mode (Linux).
extension-module = ["pyo3/extension-module"]

[lib]
name = "opencc_pyo3"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "opencc_pyo3"         # maturin maps to Python project name (underscore)
