[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "opencc_pyo3"
dynamic = ["version"]
authors = [
    { name="laisuk", email="laisuk@yahoo.com" },
]
description = "A Python extension module powered by Rust and PyO3, providing fast and accurate Chinese text conversion."
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/laisuk/opencc_pyo3"
Issues = "https://github.com/laisuk/opencc_pyo3/issues"
